# ios-ui-testability-contract-skill

./: LICENSE  PUBLISHING.md  README.md  REMOTE_INSTALL.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
examples/broken-swiftui-contract/: RecipeFormView.swift
references/: artifact-contract.md  failure-patterns.md  swiftui-contract-patterns.md  verification-loop.md
scripts/: check-skill.sh  draft_planner_context.py  inventory_accessibility_ids.py  inventory_launch_contract.py  triage_ui_contract_failure.py
src/ios_ui_testability_contract/: __init__.py  cli.py  draft_planner_context.py  inventory_accessibility_ids.py  inventory_launch_contract.py  triage_ui_contract_failure.py
tests/: test_skill_scripts.py
tests/fixtures/sample_failure_bundle/: planner-validation-error.txt  scenario.json  summary.md  ui-tree.json
